# ChangeLog for sys-auth/pam_mount
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mount/ChangeLog,v 1.4 2007/09/21 22:43:34 hanno Exp $

  21 Sep 2007; Hanno Boeck <hanno@gentoo.org> pam_mount-0.19.ebuild:
  Add dep to libxml2 and use pam eclass.

  14 Aug 2007; Benjamin Smee <strerror@gentoo.org> pam_mount-0.18.ebuild,
  pam_mount-0.19.ebuild:
  Change for bug #188768

  13 Jul 2007; Hanno Boeck <hanno@gentoo.org>
  +files/pam_mount-cryptsetup-path.patch, +metadata.xml,
  +pam_mount-0.18.ebuild, +pam_mount-0.19.ebuild:
  Move to sys-auth.

  13 Jul 2007; Hanno Boeck <hanno@gentoo.org> pam_mount-0.19.ebuild:
  Don't double-install sbin scripts.

*pam_mount-0.19 (13 Jul 2007)

  13 Jul 2007; Hanno Boeck <hanno@gentoo.org> +pam_mount-0.19.ebuild:
  Version bump.

*pam_mount-0.18 (21 Apr 2007)

  21 Apr 2007; Hanno Boeck <hanno@gentoo.org>
  +files/pam_mount-cryptsetup-path.patch, +pam_mount-0.18.ebuild:
  Initial commit, bug #24213.
