@@ -7,6 +7,7 @@ RMD160 be4c1139cd971f6dcd62f46f64164ddcae44b975 files/pam_mount-cryptsetup-path.
 SHA256 341aefc753eb0383f46662025a79ebd4792fc378d48a23cc190823a090ce160f files/pam_mount-cryptsetup-path.patch 569
 DIST pam_mount-0.18.tar.bz2 294620 RMD160 077a9fb452197cadc8d7e5350b722ee81563181f SHA1 df3029817cb27eafc8f20728230edbfffdd35cac SHA256 efaac862ccc18ebd49a2f4c10d78bbb6f15a47fb3f6426c07cee51497d5b9797
 DIST pam_mount-0.19.tar.bz2 293795 RMD160 d78994e6ac13f7b849f2f96bcc796b93bcc3112b SHA1 0fdd4a02b8b4b747fe3c23af505da4527a0d2e02 SHA256 6245e1647e69feb3574a12e42078bcdf8a12259f25f9dde1218257db110356ce
+DIST pam_mount-0.26.tar.bz2 293149 RMD160 f6b6fc81a354f1e2d36be183533bf6af80f36f0d SHA1 f793c8db9388a4c408d268a9d8036cb1d3d055d5 SHA256 f0454105d20c010a450816d4eb438a2b9224a313c47f92bf07e4105806193aae
 EBUILD pam_mount-0.18.ebuild 975 RMD160 db08ba31ab7611f65660fbfcc2d849a03a4923bf SHA1 b77b859a0e0ff09c2540826d108ab68414bd6846 SHA256 8452e9f6fc2db371bf2f2c014044cab5e2228bac75a25bba9df32778eb1d27d5
 MD5 17aa6370f252849771f6544915079146 pam_mount-0.18.ebuild 975
 RMD160 db08ba31ab7611f65660fbfcc2d849a03a4923bf pam_mount-0.18.ebuild 975
@@ -15,10 +16,14 @@ EBUILD pam_mount-0.19.ebuild 988 RMD160 111b3ac336f707b3e9d74acb8bad8cbb26a43289
 MD5 b17e66c6004f9cccd53ec49f5398683d pam_mount-0.19.ebuild 988
 RMD160 111b3ac336f707b3e9d74acb8bad8cbb26a43289 pam_mount-0.19.ebuild 988
 SHA256 e8037b722cbd0e91a1b4455cc9ad545c8efc96e6a2bebe45232b35f8f4f7e267 pam_mount-0.19.ebuild 988
-MISC ChangeLog 1017 RMD160 000801591b5e35b2ca7eb130f7a15b273a774482 SHA1 83aae900d0955d074cbef522d33c431d09419c43 SHA256 f94ba40e5c896764689b895edcc2afb8a159f8537ec720c77afd7626ea602181
-MD5 bc0c8014fc9d2271d519a99da6ba13cc ChangeLog 1017
-RMD160 000801591b5e35b2ca7eb130f7a15b273a774482 ChangeLog 1017
-SHA256 f94ba40e5c896764689b895edcc2afb8a159f8537ec720c77afd7626ea602181 ChangeLog 1017
+EBUILD pam_mount-0.26.ebuild 974 RMD160 61ee0f07af4208c5a08ce0b293cb4976acd09952 SHA1 230ac36d30809f04a68c0e3975959ed07200a2c4 SHA256 f78baeea71985a7eace7a337ee93ce98ed7edd24c6fdbdd107baee3cfc204377
+MD5 d4eb0e376b99ef2e3c8ffdcdb9cc9536 pam_mount-0.26.ebuild 974
+RMD160 61ee0f07af4208c5a08ce0b293cb4976acd09952 pam_mount-0.26.ebuild 974
+SHA256 f78baeea71985a7eace7a337ee93ce98ed7edd24c6fdbdd107baee3cfc204377 pam_mount-0.26.ebuild 974
+MISC ChangeLog 1135 RMD160 59437c5d680f1ea9eb16f366cb5078362a173b7c SHA1 2514d7bf11ae854d064bc1be259c77d4ab157b6b SHA256 cadf4f319fe7b699a503d8e52b9c42b73abd0041fb7b289ce895b22239099498
+MD5 9c4629feef50dcfbdddda2c56fb981ed ChangeLog 1135
+RMD160 59437c5d680f1ea9eb16f366cb5078362a173b7c ChangeLog 1135
+SHA256 cadf4f319fe7b699a503d8e52b9c42b73abd0041fb7b289ce895b22239099498 ChangeLog 1135
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -29,10 +34,13 @@ SHA256 5e9273d06531f2169f74ea0586c624af3000e9503a0de12cc526b6de966ad803 files/di
 MD5 1cfbe5d840ce51b41664587953baa556 files/digest-pam_mount-0.19 247
 RMD160 f83283d6e9be7784469dbccc8364b96068970793 files/digest-pam_mount-0.19 247
 SHA256 cd8a460a3f457e32a232f4fa51bd4a9b7c6726988ab4fcdd9a12cd7e43968b88 files/digest-pam_mount-0.19 247
+MD5 be8a7e4bde5ae41d3e7b07f231c39f95 files/digest-pam_mount-0.26 247
+RMD160 c4b31ddfffe1e67d2686ad3393cf2cd83a779b69 files/digest-pam_mount-0.26 247
+SHA256 b93d057c3828f44c83a60c0aced77a35e892a22c1f70cc5e51a470d1aaf0f5a3 files/digest-pam_mount-0.26 247
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG9Ekhr2QksT29OyARAtoxAJwL4FEXcPyoPwbsYLF/gytk9ldHjwCgnuHo
-T1yNuqLPLKwyTgfi4V6J1+c=
-=O/kb
+iD8DBQFG+c64r2QksT29OyARAovNAJ9FJcweRDTtkb6yK8vVX9GbyCe6/wCfdAQE
+9pba6eINGQ+d1/svMp3/y/I=
+=3qES
 -----END PGP SIGNATURE-----
