@@ -1,0 +1,3 @@
+MD5 083631e7b1a1b24e25b453f084abb05b pam_mount-0.26.tar.bz2 293149
+RMD160 f6b6fc81a354f1e2d36be183533bf6af80f36f0d pam_mount-0.26.tar.bz2 293149
+SHA256 f0454105d20c010a450816d4eb438a2b9224a313c47f92bf07e4105806193aae pam_mount-0.26.tar.bz2 293149
