@@ -1,6 +1,11 @@
 # ChangeLog for sys-auth/pam_mount
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mount/ChangeLog,v 1.4 2007/09/21 22:43:34 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mount/ChangeLog,v 1.5 2007/09/26 03:14:30 hanno Exp $
+
+*pam_mount-0.26 (26 Sep 2007)
+
+  26 Sep 2007; Hanno Boeck <hanno@gentoo.org> +pam_mount-0.26.ebuild:
+  Version bump.
 
   21 Sep 2007; Hanno Boeck <hanno@gentoo.org> pam_mount-0.19.ebuild:
   Add dep to libxml2 and use pam eclass.
